Update answer for Q1 in reports

--- a/rentals/reports/pages/answers/Q1.md
+++ b/rentals/reports/pages/answers/Q1.md
@@ -1,12 +1,20 @@
 ---
-title: Amenities
+title: Filtering by Amenities
 queries:
     - q1_data.sql
 ---
 
+### Showing revenue segmented by whether or not `Air conditioning` is present in the listing
+
+
 <BarChart
     data={q1_data}
-    x=month_booked
-    y=segment_as_percent_of_total
+    x=display_date
+    y={['non_segment_pct', 'segment_pct']}
+    yMax=1
 />
+
+<LinkButton url='/other-page'>
+    View dbt Model
+</LinkButton>
 
